# fluxit

./: .editorconfig  .pre-commit-config.yaml  README.md  mise.toml  pyproject.toml
.github/workflows/: build.yml
examples/templates/app_template/: ks.yaml.j2
examples/templates/app_template/app/: configmap.yaml.j2  helmrelease.yaml.j2  kustomization.yaml.j2  secret.sops.yaml.j2
fluxit/: _defaults.py  cli.py  cli_logic.py  fluxit.py  output.py
