[project]
name = "fluxit"
version = "0.1.0"
description = "K8s kustomization and helmrelease bootstrapper for Flux-based k8s-at-home repos."
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
  "click>=8.1.8",
  "inquirerpy>=0.3.4",
  "jinja2>=3.1.6",
  "ruamel-yaml>=0.18.10",
]

[project.urls]
Homepage = "https://github.com/geekifier/fluxit"
Repository = "https://github.com/geekifier/fluxit.git"

[tool.uv]
package = true

[project.scripts]
fluxit = "fluxit.cli:main"

[tool.ruff]
line-length = 100
indent-width = 4
lint.select = ["E", "F", "I"]
lint.fixable = ["ALL"]
format.indent-style = "space"
format.docstring-code-format = true

[tool.basedpyright]
reportPrivateImportUsage = "none"
include = ["fluxit"]
typeCheckingMode = "standard"

[tool.setuptools]
packages = ["fluxit"]

[dependency-groups]
dev = ["basedpyright>=1.29.1", "ruff>=0.11.8"]
